--- a/book.toml
+++ b/book.toml
@@ -3,7 +3,7 @@ authors = ["Kurt Pan"]
 language = "en"
 multilingual = false
 src = "post"
-title = "ZK Insights"
+title = "ZKPunk's ZK Insights"
 
 [preprocessor]
 
