--- a/book.toml
+++ b/book.toml
@@ -32,6 +32,7 @@ command = "mdbook-mermaid"
 [output.html]
 mathjax-support = true
 no-section-label = true
+default-theme = "ayu"
 
 
 [output.html.fold]
